# Sakar-Robotics-assignment

./: CMakeLists.txt  README.md  package.xml
Robotics assignment/behavior_tree/: mission_bt.xml
Robotics assignment/config/: nav2_params.yaml
Robotics assignment/launch/: README_launch_instructions.txt  mission_control.launch.py  nav2_bringup.launch.py  slam_toolbox.launch.py  spawn_robot.launch.py  teleop.launch.py
Robotics assignment/moveit_config/: CMakeLists.txt  package.xml
Robotics assignment/moveit_config/config/: joint_limits.yaml
Robotics assignment/rviz/: mobile_manipulator.rviz
Robotics assignment/scripts/: make_demo_gif.sh
Robotics assignment/src/: mission_control_node.cpp  mock_arm_node.cpp  pick_place_moveit.cpp
Robotics assignment/urdf/: arm_3dof.xacro  tb3_with_arm_3dof.xacro  tb3_with_doosan.xacro
Robotics assignment/worlds/: industrial_demo.world
