<?xml version="1.0"?>
<package format="3">
  <name>arm_moveit_config</name>
  <version>0.1.0</version>
  <description>Minimal MoveIt2 config package for the 3-DOF arm</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
